--- a/src/assets/styles/goals.css
+++ b/src/assets/styles/goals.css
@@ -69,7 +69,16 @@ h2{
     font-weight: 600;
     font-style: italic;
     padding-top: 10px;
+    color: #ffffff;
+}
+
+h3{
+    font-family: "Roboto", sans-serif;
+    font-weight: 600;
+    font-style: italic;
+    padding-top: 10px;
     color: #FF7710;
+    padding-bottom: 10px;
 }
 
 p{
@@ -80,85 +89,63 @@ p{
 
 strong {
     color: #FF7710;
+    display: inline;
 }
 
-
-
-.about__wrapper{
-    display: flex;
-    flex-direction: column;
+/* goals 스타일 */
+.goals_wrapper{
     padding: 20px;
-}
-
-.about__wrapper_top{
+    width: 100%;
+    height: 400px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 10px;
+    align-items: center;
 }
 
-.about__wrapper_bottom{
+h1{
+    width: 100%;
+    height: 220px;
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.goals_item_wrapper{
     width: 100%;
     height: 100%;
-    margin-top: 20px;
     display: flex;
     flex-direction: row;
+    justify-content: space-around;
+    margin: 30px 20px;
+}
+
+.goals{
+    width: 300px;
+    height: 355px;
+    margin: 10px;
+    border: 1px solid #FF7710;
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    padding-bottom: 150px;
 }
 
-.about__wrapper_left {
-    width: 400px;
-    height: 400px;
-    flex-shrink: 0;
-    border-radius: 50%; /* 원형으로 표시 */
-    overflow: hidden; /* 넘치는 부분 숨김 */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.5);
-    display: flex; /* 이미지를 중앙 정렬하기 위해 flex 사용 */
-    justify-content: center; /* 가로 방향 중앙 정렬 */
-    align-items: center; /* 세로 방향 중앙 정렬 */
-}
-
-.myImage {
-    width: 100%; /* 컨테이너 너비에 맞춤 */
-    height: 100%; /* 컨테이너 높이에 맞춤 */
-    object-fit: cover; /* 이미지 비율을 유지하면서 컨테이너를 가득 채움 */
-    object-position: center; /* 이미지를 중앙에 위치시킴 */
-}
-
-.about__wrapper_right{
-    width: 522px;
-    height: 426px;
-    flex-shrink: 0;    
-    background-color: #EBEBEB;
-    border-radius: 12px;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.5);
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin: 20px 50px 0px 100px;
-    padding: 20px;
-    
-}
-
-.background {
-    height: 170px;
-    font-size: 14px;
-    letter-spacing: 0.2px; /* 자간을 1픽셀만큼 늘림 */
-    text-align: center; /* 텍스트를 중앙 정렬 */
-    background-image: url("../images/background.png");
-    background-size: cover;
-    background-position: center;
-    padding: 30px;
-}
-
-.profile{
+.goals h2{
     width: 100%;
-    height: 150px;
-    background: linear-gradient(135deg, #FF7710 20%, #FFC300 50%);
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    border-radius: 15px;
+    height: 55px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
     padding: 10px;
+    background-color: #FF7710;
+}
+
+.goals p{
+    width: 100%;
+    height: 100%;
+    letter-spacing: 0.2px;
+    text-align: center;
+    padding: 84px 27px;
 }
